--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Nagarjun Team Leave Plan Tracker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
-    <h1>Nagarjun Team</h1>
-    <h2>Motto: Leave Plan Tracker</h2>
-    <section>
-      <h3>Upcoming Leaves</h3>
-      <table id="leaves-table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>From</th>
-            <th>To</th>
-            <th>Reason</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Populated by script.js -->
-        </tbody>
-      </table>
-    </section>
-    <small>Only admin can edit this tracker (edit <code>leaves.json</code> file and redeploy)</small>
+    <h1>Nagarjun Team Availability</h1>
+    <br>
+    <div class="calendar-actions">
+      <button id="add-leave-btn">➕ Add Leave</button>
+      <button id="add-member-btn">👤 Add Teammate</button>
+    </div>
+    <div id="member-list-panel"></div>
+    <div id="calendar"></div>
+    <small>
+      In Nagarjun Team, leave plans are part of our balance — rest, recharge and return ready to achieve more... <br>
+    </small>
   </main>
+  <!-- Modal for adding leave/member -->
+  <div class="modal-bg" id="modal-bg">
+    <div class="modal-content" id="modal-content"></div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
