--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
   <main>
     <h1>Nagarjun Team Availability</h1>
-    <br>
     <div class="calendar-actions">
       <button id="add-leave-btn">➕ Add Leave</button>
       <button id="add-member-btn">👤 Add Teammate</button>
@@ -18,7 +17,7 @@
     <div id="member-list-panel"></div>
     <div id="calendar"></div>
     <small>
-      In Nagarjun Team, leave plans are part of our balance — rest, recharge and return ready to achieve more... <br>
+      In Nagarjun Team, leave plans are part of our balance — rest, recharge and return ready to achieve more...
     </small>
   </main>
   <!-- Modal for adding leave/member -->
