--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
   <script>
     // Paste your firebaseConfig below!
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DB_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MSG_SENDER_ID",
-      appId: "YOUR_APP_ID"
+    apiKey: "AIzaSyBJMyiAyU2r-fcsGn5Jfb3IC9eeoSKY-EA",
+    authDomain: "leave-tracker-5d020.firebaseapp.com",
+    databaseURL: "https://leave-tracker-5d020-default-rtdb.firebaseio.com",
+    projectId: "leave-tracker-5d020",
+    storageBucket: "leave-tracker-5d020.firebasestorage.app",
+    messagingSenderId: "1026174761332",
+    appId: "1:1026174761332:web:d82c19460f3283186c1421",
+    measurementId: "G-Q28C56LGLJ"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
