--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
   <main>
     <h1>Nagarjun Team Availability</h1>
-    <br>
     <div class="calendar-actions">
       <button id="add-leave-btn">➕ Add Leave</button>
       <button id="add-member-btn">👤 Add Teammate</button>
@@ -26,12 +25,11 @@
   <div class="modal-bg" id="modal-bg">
     <div class="modal-content" id="modal-content"></div>
   </div>
-  <!-- Firebase Modular SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
-    import { getDatabase, ref, onValue, set } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-database.js";
-
+  <!-- Firebase Compat SDKs (not modules) -->
+  <script src="https://www.gstatic.com/firebasejs/11.8.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.8.1/firebase-database-compat.js"></script>
+  <script>
+    // Your Firebase config
     const firebaseConfig = {
       apiKey: "AlzaSyBJMyiAyU2r-fcsGn5Jfb3IC9eeoSKY-EA",
       authDomain: "leave-tracker-5d020.firebaseapp.com",
@@ -42,14 +40,8 @@
       appId: "1:1026174761332:web:d82c19460f2383186c1421",
       measurementId: "G-Q28C56LGLJ"
     };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    getAnalytics(app); // Optional
-    const db = getDatabase(app);
-
-    // Expose Firebase DB for script.js
-    window._firebase = { db, ref, onValue, set };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
   </script>
   <!-- FullCalendar JS -->
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
