--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <main>
     <h1>Nagarjun Team Availability</h1>
     <div class="calendar-actions">
-      <button id="add-leave-btn">➕ Add Leave</button>
-      <button id="add-member-btn">👤 Add Teammate</button>
+      <button id="add-leave-btn">🗓️ Add Leave</button>
+      <button id="add-member-btn">🥷🏻 Add Teammate</button>
     </div>
     <div id="unity-group-panel"></div>
     <div id="calendar"></div>
     <small>
-      In Nagarjun Team, leave plans are part of our balance — rest, recharge, and return ready to achieve more...
+      In Nagarjun Team, leave plans are part of our balance — rest, recharge and return ready to achieve more...🥳
     </small>
   </main>
   <!-- Modal for adding leave/member -->
