--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="unity-group-panel"></div>
     <div id="calendar"></div>
     <small>
-      In Nagarjun Team, leave plans are part of our balance — rest, recharge and return ready to achieve more...🥳
+      In Nagarjun Team, leave plans are part of our balance — rest, recharge and return ready to achieve more...😎
     </small>
   </main>
   <!-- Modal for adding leave/member -->
